working on real time messaging from web page to background. Having trouble passing message from modified source script to background or to injected content script, due to isolated worlds

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,15 @@
     ],
     "persistent": false
   },
+  // "content_scripts": [
+  //   {
+  //     "matches": [
+  //       "http://*/*", 
+  //       "https://*/*"],
+  //     "js": ["tracer.js"]//,
+  //     //"run_at": "document_start"
+  //   }
+  // ],
 
   "manifest_version": 2
 }
