--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp.browserify",
+  "name": "seejs",
   "version": "1.0.0",
   "description": "Browserify, Babelify + Watchify + Sourcemaps Example",
   "main": "gulpfile.js",
@@ -20,5 +20,37 @@
     "react-dom": "^0.14.3",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.3.0"
-  }
+  },
+  "dependencies": {
+    "ace-builds": "^1.2.2",
+    "babelify": "^6.4.0",
+    "browser-sync": "^2.10.0",
+    "browserify": "^8.1.3",
+    "bootstrap": "^3.3.6",
+    "d3": "^3.5.10",
+    "d3-tip": "^0.6.7",
+    "exorcist": "^0.4.0",
+    "gulp": "^3.9.0",
+    "jquery": "^2.1.4",
+    "gulp-util": "^3.0.7",
+    "jquery-ui": "^1.10.5",
+    "js-beautify": "^1.5.10",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^2.6.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kevin-dyer/seejs.git"
+  },
+  "keywords": [
+    "js",
+    "visualization"
+  ],
+  "author": "Kevin N Dyer",
+  "bugs": {
+    "url": "https://github.com/kevin-dyer/seejs/issues"
+  },
+  "homepage": "https://github.com/kevin-dyer/seejs#readme"
 }
